adds stats endpoint
