# src/app/services/models/statistics-response.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface StatisticsResponse {
+  accountBalance?: number;
+  highestDeposit?: number;
+  highestTransfer?: number;
+}
